# Penguin-video

./: CMakeLists.txt  README.md
assets/: resources.qrc
src/: main.cpp
src/common/: penguinplay.cpp  penguinplay.h
src/view/: penguinwindow.cpp  penguinwindow.h
src/widget/: penguinplaydialog.cpp  penguinplaydialog.h
